--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
     "next": "^10.1.3",
+    "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
