--- a/package.json
+++ b/package.json
@@ -81,8 +81,10 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-effects-steps": "^1.0.3",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typescript-fsa": "^3.0.0",
-    "typescript-fsa-reducers": "^1.2.2"
+    "typescript-fsa-reducers": "^1.2.2",
+    "typescript-fsa-redux-thunk": "^2.10.1"
   }
 }
