--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "dayjs": "^1.10.4",
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
     "next": "^10.1.3",
