--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint:stylelint": "stylelint --fix './src/**/*.{css,scss}'",
     "test": "jest",
     "test:watch": "jest --watch",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -s ./public -p 6006"
   },
   "husky": {
     "hooks": {
@@ -36,6 +37,11 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.13.15",
+    "@storybook/addon-actions": "^6.2.8",
+    "@storybook/addon-essentials": "^6.2.8",
+    "@storybook/addon-links": "^6.2.8",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.2.8",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
