--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@storybook/addon-links": "^6.2.8",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.2.8",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^26.0.22",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -74,6 +74,7 @@
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
+    "ts-jest": "^26.5.5",
     "typescript": "^4.1.3",
     "vercel": "^21.0.1"
   },
