--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "recommend-books",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "firebaseFunctions.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "build-storybook": "build-storybook",
     "storybook": "start-storybook -s ./public -p 6006",
-	"deploy": "npm run export && firebase deploy"
+    "deploy": "firebase deploy"
   },
   "husky": {
     "hooks": {
@@ -65,7 +65,6 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
-    "redux-devtools-extension": "^2.13.8",
     "sass": "^1.30.0",
     "sass-loader": "^10.0.1",
     "style-loader": "^2.0.0",
@@ -84,6 +83,7 @@
     "dayjs": "^1.10.4",
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
+    "firebase-functions": "^3.13.2",
     "next": "^10.1.3",
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
@@ -91,6 +91,7 @@
     "react-paginate": "^7.1.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typescript-fsa": "^3.0.0",
