--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "build-storybook": "build-storybook",
     "storybook": "start-storybook -s ./public -p 6006",
-	"deploy": "npm run export && firebase deploy"
+    "deploy": "npm run export && firebase deploy"
   },
   "husky": {
     "hooks": {
@@ -49,6 +49,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-paginate": "^6.2.1",
     "@types/react-redux": "^7.1.12",
+    "@types/redux-mock-store": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "babel-loader": "^8.2.2",
@@ -66,6 +67,7 @@
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-mock-store": "^1.5.4",
     "sass": "^1.30.0",
     "sass-loader": "^10.0.1",
     "style-loader": "^2.0.0",
