--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-paginate": "^6.2.1",
     "@types/react-redux": "^7.1.12",
     "@types/redux-mock-store": "^1.0.2",
@@ -90,6 +91,7 @@
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-infinite-scroller": "^1.2.4",
     "react-paginate": "^7.1.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
