--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "dayjs": "^1.10.4",
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
+    "firebase-functions": "^3.13.2",
     "next": "^10.1.3",
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
