--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "redux-mock-store": "^1.5.4",
+    "resolve-url-loader": "^4.0.0-beta.2",
     "sass": "^1.30.0",
     "sass-loader": "^10.0.1",
     "style-loader": "^2.0.0",
