--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "resolve-url-loader": "^4.0.0-beta.2",
     "sass": "^1.30.0",
     "sass-loader": "^10.0.1",
+    "storybook-addon-next-router": "^2.0.4",
     "style-loader": "^2.0.0",
     "stylelint": "^13.8.0",
     "stylelint-config-recess-order": "^2.3.0",
@@ -87,7 +88,7 @@
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
     "firebase-functions": "^3.13.2",
-    "next": "^10.2.0",
+    "next": "^10.2.3",
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
